re-order and some cuts

--- a/Focus.tex
+++ b/Focus.tex
@@ -21,7 +21,7 @@
 \HugeQuote{PL_DST}{Don't spend time with people you don't like.}{}{Prue Leith}{}{}
 \cleartoleftpage
 
-\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{RH_HMY}{}
+\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
 
 \hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
 %todo reposition
