--- a/Generosity.tex
+++ b/Generosity.tex
@@ -31,9 +31,7 @@
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
 
-% \hugeQuote{RH_HATE}{Because\ldots\newline
-% hate will get you every time}{\newline
-% Every time.}{Ryan Holiday}{}{}
+\HugeQuote{S_DO}{Kindness gives birth to kindness.}{}{Seneca}{}{}
 
 \HugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
 
