--- a/GratitudeIntro.tex
+++ b/GratitudeIntro.tex
@@ -7,8 +7,8 @@ It's not just the things we have already that we take for granted, it's someone 
 
 If we can't rely on ourselves to be  grateful, we need a little help to remind us and correct our course.
 
-The stoics had a, seemingly, counter-intuitive routine to make sure we appreciated the things we have and the people around us. They suggested that we occasionally take the time to imagine our life without our loved ones and our most treasured possessions (\S \ref{E_MORTAL}). By routinely putting ourselves through the loss of a limb or a loved one, we'll feel truly grateful when they are with you (or still connected to the rest of your body).
+The stoics offered a routine to make sure we appreciated the things we have and the people around us. They suggested that we occasionally take the time to imagine our life without our loved ones and our most treasured possessions (\S \ref{E_MORTAL}). By regularly putting ourselves through the loss of a limb or a loved one, we'll feel truly grateful when they are with you (or still connected to the rest of your body).
 
-We know that we should behave as though this is our final day (\S \ref{RH_LIVE} and \ref{MA_LIVE}) so simply waking up provides us with a great source of gratitude for the day ahead. No matter what else happens (\S \ref{MA_TRUST}) not only will we be ready for it but we'll be thankful for the chances brought us for improving ourselves by focussing on the aims we have.
+We know that we should behave as though this is our final day (\S \ref{RH_LIVE} and \ref{MA_LIVE}) so simply waking up provides us with a great source of gratitude for the day ahead (there are many who won't of course). No matter what else happens (\S \ref{MA_TRUST}) not only will we be ready for it but we'll be thankful for the chances brought us for improving ourselves by focussing on the aims we have.
 
 }
