--- a/Learning.tex
+++ b/Learning.tex
@@ -49,6 +49,18 @@ Fewer interruptions, fewer conclusions.
 
 \hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it.}{Confucious}{}{}
 
+%% mentors
+%%%%%%%%%%%%%%%%%%
+
+\cleartoleftpage
+\smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
+\smallQuote{WS_TRUST}{Love all.\newline
+Trust a few.\newline
+Do wrong to none.}{William Shakespeare}{}
+%TODO: check w/maddie for wording 
+%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit (\S \ref{HT_CREDIT}).}
+
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
