--- a/Patience.tex
+++ b/Patience.tex
@@ -1,5 +1,10 @@
 \input{PatienceIntro.tex}
 
+%
+%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartorightpage
+\HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly.}{}{Isocrates}{MA_GOAL}{}
+
 % timing
 %%%%%%%%%%%%%%%%%%%%%%%%
 \cleartorightpage
@@ -21,14 +26,9 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 \cleartoleftpage
 \hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted.}{Ulysses S Grant}{RH_ENDURE}{}
 
-%TODO seneca at the door
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
 
-\hugeQuote{E_TTT}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let m pit you to the test.}}{Epictetus}{}{}
-%
-%%%%%%%%%%%%%%%%%%%%%%%%
-\cleartorightpage
-\HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
+\hugeQuote{E_DLTF}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let me put you to the test.}}{Epictetus}{}{}
 
 
 % think before you speak
@@ -56,7 +56,7 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 % \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
 
-\hugeQuote{LT_ANGER}{The best fighter is never angry}{}{Lao Tzu}{}
+\hugeQuote{LT_ANGER}{The best fighter is never angry.}{}{Lao Tzu}{}
 
 \hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
 
