--- a/Resilience.tex
+++ b/Resilience.tex
@@ -35,15 +35,16 @@ Self-indulgence: tying it to the things that happen to you.\newline
 Sanity: tying it to your own actions.}{Marcus Aurelius}{ST_UTU}{}
 
 \cleartorightpage
-\hugeQuote{DLP_DNA}{You don't need their approval.}{}{Danielle La Porte}{}{}
-
 \hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
+
+\hugeQuote{DLP_DNA}{You don't need their approval.}{}{Danielle La Porte}{}{}
 
 \hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
 Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
-\hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
 
-\hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost used up and instead of treating yourself with respect you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
+% \hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
+
+% \hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost used up and instead of treating yourself with respect you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 
 \cleartorightpage
 \HugeQuote{LT_SANITY}{Care about what other people think}{ and you will always be their prisoner.}{Lao Tzu}{ST_UTU}{}
@@ -52,19 +53,20 @@ Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
 %%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
+\smallQuote{RH_EFFORT}{You control the effort not the results.}{Ryan Holiday}{}{}
+
 \smallQuote{MR_UTU}{If you work hard to do what is right, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
 
-\smallQuote{RH_EFFORT}{You control the effort not the results.}{Ryan Holiday}{}{}
 
 \cleartorightpage
 \HugeQuote{ST_UTU}{Ta eph'hemin}{\newline
 Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 
 %TODO: location ? 
-\hugeQuote{MA_STR}{Straight not straightened}{}{Marcus Aurelius}{}{}
-\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it}{Marcus Aurelius}{}{}
-\hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure}{Marcus Aurelius}{}{}
-
+\hugeQuote{MA_STR}{Straight not straightened.}{}{Marcus Aurelius}{}{}
+\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
+% \hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure.}{Marcus Aurelius}{}{}
+\hugeQuote{H_TRAVEL}{It is reason}{ and wisdom which take away cares not places affording views over the sea.}{Horace}{}
 
 %% observation vs perception
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -79,8 +81,11 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
 %TODO: update ? 
-\hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must}{Ryan Holiday}{}{} % taken from schopenhauer
+\hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must.}{Ryan Holiday}{}{} % taken from schopenhauer
 
+\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves}{Marcus Aurelius}{}{}
+
+\hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{}{}
 
 %% Endure
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -92,17 +97,16 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
-%TODO resilience ? 
-%\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm}{Robert Louis Stephenson}{}{}
+\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm.}{Robert Louis Stephenson}{}{}
 
+% todo review location
+% \hugeQuote{JJ_WORK}{Take a canvas}{. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
 
-\smallQuote{JJ_WORK}{Take a canvas. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
-
-\HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work}{Chuck Close}{}{}
+\HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work.}{Chuck Close}{}{}
 
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline \say{I will try again tomorrow.}}{Mary Anne Radmach}{CP_FAIL}{}
 
-\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
+\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong.}{Marcus Aurelius}{}{}
 
 \cleartoleftpage
 \hugeQuote{H_CHANGE}{Change is the only constant in life.}{}{Heraclitus}{}{}
@@ -114,7 +118,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 %% Solitude
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleartoleftpage
 \smallQuote{JB_ALONE}{All of our unhappiness comes from our inability to be alone.}{Jean de la Brugere}{}{}
 % \smallQuote{GVG_ALONE}{A bore is someone who deprives you of solitude without providing you with company}{Gian Vincenzo Gravina}{}{}
 % \smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances.}{Robert Greene}{}{}
@@ -122,9 +126,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
 % \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
-\smallQuote{LT_CH}{He who conquers others is strong, he who conquers himself is mighty.}{Lao Tzu}{}{}
-
-\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea.}{Horace}{}
+\smallQuote{LT_CH}{He who conquers others is strong, he who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
 
 \cleartorightpage
 \HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
@@ -132,13 +134,13 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 %% planning for failure and NV
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success}{Confucius}{}
+\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
 
-\smallQuote{PPPPP}{Proper planning prevents piss poor performance}{}{}
+\smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}{}
 
 \cleartorightpage
-\hugeQuote{OS_OPTIMISM}{Optimism is cowardice}{}{Oswald Spengler}{}{}
-\hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
+\hugeQuote{OS_OPTIMISM}{Optimism is cowardice.}{}{Oswald Spengler}{}{}
+\hugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{2007, but likely earlier}
 
 \cleartoleftpage
 \HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
@@ -148,17 +150,6 @@ and take what comes.}{Hannah Ardent}{}{}
 
 \cleartorightpage
 \HugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
-
-%% mentors
-%%%%%%%%%%%%%%%%%%
-
-\cleartoleftpage
-\smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
-\smallQuote{WS_TRUST}{Love all.\newline
-Trust a few.\newline
-Do wrong to none.}{William Shakespeare}{}
-%TODO: check w/maddie for wording 
-%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit (\S \ref{HT_CREDIT}).}
 
 %% Luck and Fates
 
@@ -173,20 +164,7 @@ Good fortune:
 \end{itemize}}
 {Marcus Aurelius}{E_LUCK}{}
 
-%% judgement
-%%%%%%%%%%%%%%%%%%%%%%%
 
-\hugeQuote{MA_NOW3}{Objective judgment}{ now, at this very moment.
-
-Unselfish action now, at this very moment.
-
-Willing acceptance of all external events now, at this very moment.
-
-That's all you need}{Marcus Aurelius}{}{}
-
-\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves}{Marcus Aurelius}{}{}
-
-\hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{}{}
 
 \cleartorightpage
 \HugeQuote{TT_BURDEN}{The burden is equal to the strength of the horse.}{}{The Talmud}{}{}
