--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -3,7 +3,7 @@
 
 We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of unexpected changes of plan (\S \ref{H_CHANGE}), times of poor judgement (\S \ref{FN_TIRED}), and even after outright failures (\S \ref{NT_FAIL}) will mean that we'll still make slow progress towards our aim of a better self. 
 
-The challenges, of course, won't just come from us and our lapses in judgement or the Fates\llink{https://en.wikipedia.org/wiki/Parcae} changing their mind, others will see our improvement and resent us or even try to derail us (\S \ref{S_BTR}). Our successes will make them uncomfortable after they feel as though they've been revealed as lazy, cruel or arrogant. When that happens we need to remember that we were there not so long ago ourselves (\S \ref{SL_GIVE}) but we need to keep focussed on what's truly important and what we're trying to achieve. Our route is hard enough without allowing other people to throw us off course (\S \ref{PL_DST}).
+The challenges won't just come from us and our lapses in judgement or the Fates\llink{https://en.wikipedia.org/wiki/Parcae} changing their mind, others will see our improvement and resent us or even try to derail us (\S \ref{S_BTR}). Our successes can make them uncomfortable when they feel lazy, cruel or arrogant. When that happens we need to remember that we were there not so long ago ourselves (\S \ref{SL_GIVE}) but we need to keep focussed on what's truly important and what we're trying to achieve. Our route is hard enough without allowing other people to throw us off course (\S \ref{PL_DST}).
 
 Picking ourselves up and dusting ourselves off needs to become second nature. We may be lucky enough to have support from others at times but we know we can't rely on that, we can only rely on what we control and that is nothing more than our response to what has happened.
 
