--- a/project.tex
+++ b/project.tex
@@ -11,10 +11,9 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{titlesec}
 \usepackage{makeidx}
-\usepackage{multicol}
-\usepackage{microtype}
-\usepackage{marginnote}
+% \usepackage{microtype}
 \usepackage{dirtytalk}
+% \usepackage{showframe}
 
 
 \titleformat{\chapter}[display]
