--- a/ConfidenceIntro.tex
+++ b/ConfidenceIntro.tex
@@ -13,3 +13,5 @@ We don't have control of how things will turn out measured by external metrics a
 
 Being bold enough to act in the face of that uncertainty. That's what we're aiming for.
 }
+
+% Amy Cuddy's ted talk:  http://bit.ly/1he9hAR
