--- a/Humility.tex
+++ b/Humility.tex
@@ -27,13 +27,13 @@
 \hugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you}{Maurizio Cattelan}{}{}
 
 \hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference}{Marcus Aurelius}{}{}
-%possible link to seneca quote about /thoughts at the door/
+
 \smallQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option:
 \begin{itemize}
 \item to accept this event with humility
 \item to treat each person as he should be treated
 \item to approach this thought with care, so that nothing irrational creeps in
-\end{itemize}}{Marcus Aurelius}{WG_JUDGE}{}
+\end{itemize}}{Marcus Aurelius}{WG_JUDGE}{} % E_DLTF
 %growth mindset
 \cleartoleftpage
 
