re-order resilience chapter

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -52,6 +52,8 @@ Yet, I do not intend that to be the definition of me.}{Michel De Montaigne}{HM_D
 \cleartoleftpage
 \hugeQuote{EC_FTP}{Never say that people are evil.}{ You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
 
+\hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{MA_JUDGE}{}
+
 \HugeQuote{E_ISR}{It seemed right to him.}{}{Epictetus}{}{}
 
 \cleartorightpage
