--- a/Resilience.tex
+++ b/Resilience.tex
@@ -28,18 +28,24 @@
 %%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 \smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate.}{Taylor Swift}{MA_HATE}{}
+
+\smallQuote{DLP_DNA}{You don't need their approval.}{Danielle La Porte}{}{}
+
 \smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
 
-\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
-Self-indulgence: tying it to the things that happen to you.\newline
-Sanity: tying it to your own actions.}{Marcus Aurelius}{ST_UTU}{}
+%\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
+%Self-indulgence: tying it to the things that happen to you.\newline
+%Sanity: tying it to your own actions.}{Marcus Aurelius}{ST_UTU}{}
 
+% todo location ? 
+\smallQuote{MA_STR}{Straight not straightened.}{Marcus Aurelius}{}{}
+\smallQuote{MA_MIND1}{What is outside my mind means nothing to it.}{Marcus Aurelius}{}{}
+% \hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure.}{Marcus Aurelius}{}{}
+\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea.}{Horace}{}
 \cleartorightpage
-\hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
+\HugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
 
-\hugeQuote{DLP_DNA}{You don't need their approval.}{}{Danielle La Porte}{}{}
-
-\hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
+\HugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
 Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
 
 % \hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
@@ -53,20 +59,17 @@ Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
 %%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\smallQuote{RH_EFFORT}{You control the effort not the results.}{Ryan Holiday}{}{}
+\hugeQuote{RH_EFFORT}{You control the effort}{ not the results.}{Ryan Holiday}{}{}
 
-\smallQuote{MR_UTU}{If you work hard to do what is right, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
+\hugeQuote{MR_UTU}{If you work hard to do what is right}{, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
 
 
 \cleartorightpage
 \HugeQuote{ST_UTU}{Ta eph'hemin}{\newline
 Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 
-%TODO: location ? 
-\hugeQuote{MA_STR}{Straight not straightened.}{}{Marcus Aurelius}{}{}
-\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
-% \hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure.}{Marcus Aurelius}{}{}
-\hugeQuote{H_TRAVEL}{It is reason}{ and wisdom which take away cares not places affording views over the sea.}{Horace}{}
+
+
 
 %% observation vs perception
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,11 +84,11 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
 %TODO: update ? 
-\hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must.}{Ryan Holiday}{}{} % taken from schopenhauer
+\hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must.}{Ryan Holiday}{}{} % similar to schopenhauer
 
-\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves}{Marcus Aurelius}{}{}
+\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves.}{Marcus Aurelius}{}{}
 
-\hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{}{}
+
 
 %% Endure
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -97,7 +100,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
-\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm.}{Robert Louis Stephenson}{}{}
+\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots\newline in a thunderstorm.}{Robert Louis Stephenson}{}{}
 
 % todo review location
 % \hugeQuote{JJ_WORK}{Take a canvas}{. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
@@ -114,7 +117,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \hugeQuote{JM_CHANGE}{You can suffer}{ the pain of change or suffer remaining the way you are.}{Joyce Meyer}{}{}
 
 \cleartorightpage
-\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
+\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf.}{Jon Kabat Zin}{H_CHANGE}{}
 
 %% Solitude
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -134,13 +137,15 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 %% planning for failure and NV
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
-
 \smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}{}
 
+\smallQuote{OS_OPTIMISM}{Optimism is cowardice.}{}{Oswald Spengler}{}{}
+
+\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
+
 \cleartorightpage
-\hugeQuote{OS_OPTIMISM}{Optimism is cowardice.}{}{Oswald Spengler}{}{}
-\hugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{2007, but likely earlier}
+
+\HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{2007, but likely earlier}
 
 \cleartoleftpage
 \HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
@@ -149,7 +154,7 @@ expect the best \newline
 and take what comes.}{Hannah Ardent}{}{}
 
 \cleartorightpage
-\HugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
+\HugeQuote{SP_LUCK}{Preparation}{ not luck.}{}{}{}
 
 %% Luck and Fates
 
