add short note on woop

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -137,15 +137,18 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 %% planning for failure and NV
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}{}
 
 \smallQuote{OS_OPTIMISM}{Optimism is cowardice.}{}{Oswald Spengler}{}{}
+
+\smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}{}
 
 \smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
 
 \cleartorightpage
 
-\HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{2007, but likely earlier}
+\HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{%2007, but likely earlier
+We need some hope to keep us going but without a look at what pitfalls are waiting for us we'll be lucky to get through in one piece\llink{http://woopmylife.org}.
+}
 
 \cleartoleftpage
 \HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
