correct syntax errors

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -27,11 +27,12 @@
 %% haters gonna hate
 %%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
+
+\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
+
 \smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate.}{Taylor Swift}{MA_HATE}{}
 
 \smallQuote{DLP_DNA}{You don't need their approval.}{Danielle La Porte}{}{}
-
-\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
 
 %\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
 %Self-indulgence: tying it to the things that happen to you.\newline
@@ -39,9 +40,14 @@
 
 % todo location ? 
 \smallQuote{MA_STR}{Straight not straightened.}{Marcus Aurelius}{}{}
-\smallQuote{MA_MIND1}{What is outside my mind means nothing to it.}{Marcus Aurelius}{}{}
+
+\cleartorightpage
+
+\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
+
 % \hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure.}{Marcus Aurelius}{}{}
-\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea.}{Horace}{}
+\hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{ not places affording views over the sea.}{Horace}{}{}
+
 \cleartorightpage
 \HugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
 
@@ -84,7 +90,7 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
 %TODO: update ? 
-\hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must.}{Ryan Holiday}{}{} % similar to schopenhauer
+\hugeQuote{RH_ENDURE}{See things for what they are,}{ do what we can, endure what we must.}{Ryan Holiday}{}{} % similar to schopenhauer
 
 \hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves.}{Marcus Aurelius}{}{}
 
@@ -129,7 +135,8 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
 % \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
-\smallQuote{LT_CH}{He who conquers others is strong, he who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
+\smallQuote{LT_CH}{He who conquers others is strong,\newline
+he who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
 
 \cleartorightpage
 \HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
@@ -138,15 +145,16 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\smallQuote{OS_OPTIMISM}{Optimism is cowardice.}{}{Oswald Spengler}{}{}
+\smallQuote{OS_OPTIMISM}{Optimism is cowardice.}{Oswald Spengler}{}
 
-\smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}{}
+\smallQuote{PPPPP}{Proper planning prevents piss poor performance.}{}
 
 \smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success.}{Confucius}{}
 
 \cleartorightpage
 
-\HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{%2007, but likely earlier
+\HugeQuote{HOPE}{Hope is a poor hedge.}{}{Erik R. Sirri}{}{
+%2007, but likely earlier
 We need some hope to keep us going but without a look at what pitfalls are waiting for us we'll be lucky to get through in one piece\llink{http://woopmylife.org}.
 }
 
