add comment from School of Life

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -105,6 +105,9 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 % todo review location
 % \hugeQuote{JJ_WORK}{Take a canvas}{. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
 
+% todo review for location. 
+%\hugeQuote{SL_FAIL}{We give up not simply because events are difficult, but because we hadn’t expected them to be so.}{School of Life}{}{notes on how to keep going\llink{http://www.thebookoflife.org/how-knowledge-of-difficulties-lends-confidence/}}
+
 \HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work.}{Chuck Close}{}{}
 
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline \say{I will try again tomorrow.}}{Mary Anne Radmach}{CP_FAIL}{}
