re-order confidence chapter

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -1,11 +1,9 @@
 \input{ConfidenceIntro.tex}
 
 %uncertainty
-\smallQuote{RG_CHAOS}{Let go and move with the chaos that presents itself to you. 
-From within it you will find endless oppourtunities that elude other people}{Robert Greene}{}
-
-%\smallQuote{AG_WORK}{Don't pretend you're not proud of your work}{April Gornik}{C_BOAST}{}
-
+\hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespeare}{}{}
+\hugeQuote{RG_CHAOS}{Let go}{ and move with the chaos that presents itself to you. 
+From within it you will find endless oppourtunities that elude other people.}{Robert Greene}{}{}
 
 \cleartorightpage
 
@@ -13,7 +11,7 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 
 \hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{:\newline
 \say{I'm fine as I am}}{School of Life}{}
-{\href{http://www.thebookoflife.org/on-confidence/}{http://www.thebookoflife.org/on-confidence/}} %also include the more confident notes maybe 
+{\href{http://www.thebookoflife.org/on-confidence/}{http://www.thebookoflife.org/on-confidence/}} 
 
 %failure
 \cleartoleftpage
@@ -22,36 +20,42 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 \smallQuote{RG_FAIL}{Any kind of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work.}{Robert Greene}{}
 \smallQuote{MA_FAIL}{Not to feel exasperated, despondant and defeated because your days aren't packed with wise and moral actions. But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
 \cleartorightpage
-\hugeQuote{SP_FAIL}{A failed attempt}{ is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
-\hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action.}{Catherine Pulsifer}{S_CUCUMBER}{}
+\HugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action.}{Catherine Pulsifer}{S_CUCUMBER}{}
+
+\cleartoleftpage
+
+\hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
 
 \hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point.}{Nassim Taleb}{}{}
-\cleartoleftpage
-\HugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
-Whatever.}{Danielle La Porte}{MA_DWH}{It's how you respond to it that counts.}
 
 
-
-\cleartorightpage
-\hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
-\hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespeare}{}{}
+\hugeQuote{SP_FAIL}{A failed attempt}{ is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
 \hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless.}{Ryan Holiday}{NH_FAIL}{}
 
+
+\cleartorightpage
+
+\HugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
+Whatever.}{Danielle La Porte}{MA_DWH}{It's how you respond to it that counts.}
+
 %promotion
 \cleartoleftpage
-\smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain}{Robert Greene}{}
-\cleartorightpage
-\hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
+\smallQuote{AG_WORK}{Don't pretend you're not proud of your work.}{April Gornik}{C_BOAST}{}
 
+\smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain.}{Robert Greene}{}
+
+
+\cleartorightpage
+%todo review location
 \hugeQuote{EG_ASK}{He who demands litte}{ gets it.}{Ellen Glasgow}{}{}
+
+\hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
 
 \cleartoleftpage
 \hugeQuote{DLP_NYG}{You are not}{ your genes}{Danielle La Porte}{}{}
-
 \hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality.}{}{Les Brown}{}{}
 \cleartorightpage
-\hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
+\HugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
 
-%\hugeQuote{HM_MIRACE}{Don't look for miracles}{ you yourself are the miracle}{Henry Miller}{}{}
