add note from Paul Graham

--- a/Focus.tex
+++ b/Focus.tex
@@ -8,6 +8,10 @@
 
 %company and how you spend your time
 
+%Relentlessly prune bullshit, don't wait to do things that matter, and savor the time you have. That's what you do when life is short.
+% Paul Graham 
+%http://www.paulgraham.com/vb.html
+
 \smallQuote{LC_COMPANY}{You are whatever the company you keep is.}{Lord Chesterfield}{}{}
 \smallQuote{C_HONOR}{Let your mind dwell on examples of honour.}{Cicero}{}{} % cf machiavelli ?
 
