re-order of Action chapter

--- a/Action.tex
+++ b/Action.tex
@@ -12,36 +12,37 @@
 \HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
 
 
-\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent.}
 \hugeQuote{FB_CWA}{Code wins.}{}{}{}{}
+\hugeQuote{LT_FAT}{Fac aut tace.}{}{}{}{Do or be silent.}
 \hugeQuote{RG_DDX}{Demonstrate}{\newline don't explicate.}{Robert Greene}{}{}
 \cleartorightpage
 \HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it.}{Yogi Bera}{}{}
 
 \cleartoleftpage
 %focus on what you can do 
-\smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
-
 \smallQuote{MA_NOW2}{Stick to what's in front of you; \newline
-Idea, action, utterance}{Marcus Aurelius}{}{}
+Idea, action, utterance.}{Marcus Aurelius}{}{}
+
+\smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see.}{Marcus Aurelius}{}
 
 
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
-And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
+And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress.}{Marcus Aurelius}{}
 
 \cleartorightpage
-\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
+\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it.}{Rudy Guilliani}{BW_TALK}{}
 
-\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
+\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit.}{Harry S Truman}{}{}
 
 \cleartorightpage
-\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans}{John Lennon}{}{}
+\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans.}{John Lennon}{}{}
 
 %consistency
-\cleartorightpage
-\hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
-\hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
-\hugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way}{Martin Luther King Jr.}{}{}
+\cleartoleftpage
+\HugeQuote{RH_HABIT}{How you do anything is how you do everything.}{}{Ryan Holiday}{}{}
+
+\HugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way.}{Martin Luther King Jr.}{}{}
+
 
 
 \cleartoleftpage
@@ -52,5 +53,8 @@ But the hardest thing of all is to act in accordance with your thinking.}{John V
 
 \cleartorightpage
 
-\HugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act,}{Musonius Rufus}{}{}
+\HugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act.}{Musonius Rufus}{}{}
 
+\cleartorightpage
+\HugeQuote{AR_HABIT}{Quality is not an act.}{\newline
+It is a habit.}{Aristotle}{}{}
