--- a/Resilience.tex
+++ b/Resilience.tex
@@ -135,8 +135,8 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 \smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
 % \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
-\smallQuote{LT_CH}{He who conquers others is strong,\newline
-he who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
+\smallQuote{LT_CH}{He who conquers others is strong.\newline
+He who conquers himself is mighty.}{Lao Tzu}{}{} % todo update quote from my edition
 
 \cleartorightpage
 \HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
