add bob holman quote from '1990' via Solid Steel

--- a/Learning.tex
+++ b/Learning.tex
@@ -1,12 +1,15 @@
 \input{LearningIntro.tex}
 
+
+%\smallQuote{BH_FP}{The taking of flash photos and the use of recording devices of any kind including; pens, pencils, eyes and ears, is strictly encouraged.}{Bob Holman}{}{}
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 \smallQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive}{Robert Greene}{}
 \smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
 \smallQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{Benjamin Franklin}{}
-\smallQuote{RH_LIVE}{Learn as if you were going to live but live as if you were going to die tomorrow.}{Edmund Rich}{}
+\smallQuote{RH_LIVE}{Learn as if you were going to live but live as if you were going to die tomorrow\llink{http://bit.ly/2fIQFOc}.}{Edmund Rich}{}
 %Possibly much earlier though.
 %https://books.google.co.uk/books?id=95mdmyMC8SsC&dq=%22live+as+if+you+were+to+die+to-morrow%22&pg=PA147&redir_esc=y#v=onepage&q=%22live%20as%20if%20you%20were%20to%20die%20to-morrow%22&f=false
 
